k8s-resources/01-pod-spec.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-pod
spec:
  containers:
  - name: busybox-container
    image: busybox:latest
    command: ["sleep", "3600"]
