k8s-resources/netowork-policy.yaml
Create a new namespace named airfusion.

Create a new network policy named my-net-po in the airfusion namespace

Requirements:
1. Netowrk policy should allow PODS within the airfusion to connect to each other only on Port 80. No other ports should be allowed.

2. No Pods from outside of the airfusion should be able to connect to any pods inside the airfusion. 

Solution:
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-net-po
  namespace: airfusion
spec:
  podSelector: {} 
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              project: airfusion
          podSelector: {}
      ports:
        - protocol: TCP
          port: 80
